--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/responsive.css
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/responsive.css
@@ -62,9 +62,11 @@
         font-size: 12px;
     }
 
-    #div-show-img img {
-        width: 135px;
+    #show-img img {
+        width: 175px;
+    
     }
+
 }
 
 @media(max-width: 540px) {
