--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/styles.css
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/styles.css
@@ -178,13 +178,33 @@ body {
 #show-img {
     text-align: center;
 }
-
-#show-img img {
+.vDiv {
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.vDiv img {
     height: 150px;
     width: auto;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    display: block;
+}
+.vDiv i {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: red;
+    font-size: 20px;
+    opacity: 0;
+    transition: ease-in-out 0.4s;
+    cursor: pointer;
+}
+.vDiv:hover i{
+    opacity: 1;
+}
 
+.vDiv i:hover {
+    transform: scale(1.4);
 }
 
 #btn-handle button {
