--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/assets/css/responsive.css
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/assets/css/responsive.css
@@ -17,4 +17,14 @@
         margin: 0;
         margin-bottom: 30px;
     }
+
+    #gridMedia div {
+        width: calc(50% - 20px);
+    }
+
+    .innerGallery {
+        width: 90%;
+        height: 90%;
+    /*     overflow: hidden; */
+    }
 }
