--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/responsive.css
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/css/responsive.css
@@ -74,25 +74,35 @@
         padding: 15px;
     }
 
-    #div-show-img img {
-        width: 100%;
-    }
 
     #inp-link::placeholder {
         font-size: 10px;
     }
 
-  
     .btn-login i {
         text-align: center;
         padding-right: 2px;
         border: none;
     }
-}
 
-@media(max-width: 540px) {
+    .vDiv {
+        width: 50%;
+    }
+
     .vDiv img {
         width: 100%;
-        height: auto;
+        height: 100%;
+    }
+}
+
+@media(max-width: 375px) {
+    .vDiv {
+        width: 100%;
+        padding: 3px;
+    }
+
+    .vDiv img {
+        width: 100%;
+        height: 100%;
     }
 }
