--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/assets/css/main.css
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/assets/css/main.css
@@ -134,7 +134,7 @@
   #imgPreview {
     text-align: left;
 }
-#imgPreview .btns {
+.btns {
     text-align: center;
     margin: 20px 0;
     display: none;
