--- a/01. thanh/[PROJ-02] React Introduce/Project_Reactjs/src/App.css
+++ b/01. thanh/[PROJ-02] React Introduce/Project_Reactjs/src/App.css
@@ -1,59 +1,61 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.Header{
+.Header {
   text-align: center;
   font-size: 40px;
   background-color: yellowgreen;
 }
+
 .Main {
   display: flex;
   text-align: center;
   padding: 30px;
 }
 
-.btns {
-  width: 35%;
+.react-tabs {
+  width: 100%;
+  text-align: left;
 }
 
-.red,.green,.blue {
-  width:40%;
-  height: 42px;
-}
-.red{
-  color: red;
-}
-.green{
-  color: green;
-}
-.blue{
-  color: blue;
+.react-tabs__tab {
+  font-size: 30px;
+  width: 20%;
+  text-align: center;
 }
 
-.Footer{
-  text-align: center;
-  font-size: 32px;
-  font-weight: 900;
+.content {
+  margin: auto;
 }
 
-.bg-red{
-  background-color: red;
+.result {
+  margin: auto;
+  border: 4px solid #b2bbce;
+  border-radius: 8px;
+  width: 60%;
+  height: 100px;
+  margin-top: 60px;
+  background-color: rgb(208, 225, 219);
+  text-align: right;
   display: flex;
-  text-align: center;
-  padding: 30px;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.bg-blue{
-  background-color: blue;
-  display: flex;
-  text-align: center;
-  padding: 30px;
+
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
 }
-.bg-green{
-  background-color: green;
-  display: flex;
-  text-align: center;
-  padding: 30px;
+
+.keypad button{
+  font-size: 25px;
+}
+
+.method {
+  font-size: 25px;
+  font-weight: 700;
 }
