--- a/01. thanh/[PROJ-02] React Introduce/Project_Reactjs/src/App.css
+++ b/01. thanh/[PROJ-02] React Introduce/Project_Reactjs/src/App.css
@@ -59,9 +59,11 @@
 
 .last-result {
   font-size: 20px;
+  overflow: hidden;
 }
 
 .method {
   font-size: 40px;
   font-weight: 700;
+  overflow: hidden;
 }
