--- a/04. duy/[PROJ-3] HTML Game Fishing clone/index.css
+++ b/04. duy/[PROJ-3] HTML Game Fishing clone/index.css
@@ -1,34 +1,78 @@
 body {
   margin: 0;
   font-family: 'Fredoka One', cursive;
+  overflow: hidden;
 }
-
+.token-display-text{
+  position: absolute;
+  top: 0;
+  right: 100px;
+  font-size: 40px;
+  color:rgb(236, 181, 63);
+  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+}
+#test,#test2{
+  display: none;
+  visibility: hidden;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(77, 76, 76, 0.39);
+}
 #modal-game-ended {
   visibility: hidden;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  top: 50%;
+  transform: translate(-50% ,-50%);
+  left: 50%;
+  width: 50vw;
   background-color: rgb(135, 127, 145, .9);
+  border-radius: 10px;
 }
 
 #modal {
   visibility: hidden;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  top: 50%;
+  transform: translate(-50% ,-50%);
+  left: 50%;
+  width: 50vw;
   background-color: rgb(135, 127, 145, .9);
-  
-}
+  border-radius: 10px;
+  box-shadow: 10px 9px 17px -1px rgba(96, 231, 255, 0.75);
+  -webkit-box-shadow: 10px 9px 17px -1px rgba(96, 231, 255, 0.75);
+  -moz-box-shadow: 10px 9px 17px -1px rgba(96, 231, 255, 0.75);}
 
 
 .modal-title {
-  margin-left: 20px;
-  margin-top: 150px;
+  text-align: center;
 }
 
 ul > div {
-  margin-top: 10px;
 }
+
+.button{
+  text-align: center;
+}
+#btn-play,#play-again{
+  /* position: absolute;
+  bottom: 20px;
+  left: 50%; */
+  /* transform: translateX(-50%); */
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px 20px ;
+  display: inline-block;
+  font-size: 30px;
+  font-weight: bold;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: #a6d3e2;
+}
+#btn-play:hover,#play-again:hover{
+  background-color: #6bd3f893;
+}
+
 
 canvas {
   z-index: -2;
@@ -135,24 +179,18 @@ canvas {
 
 
 #modal-token {
+  visibility: hidden;
   display: none;
-
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  position: absolute;
+  top: 50%;
+  transform: translate(-50% ,-50%);
+  left: 50%;
+  width: 50vw;
+  background-color: rgb(135, 127, 145, .9);
+  border-radius: 10px;
 }
 
 /* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+.modal-content { 
+  font-size: 40px;
 }
