--- a/05. vu/[PROJ-3] HTML Game Hangma/main.css
+++ b/05. vu/[PROJ-3] HTML Game Hangma/main.css
@@ -1,456 +1,285 @@
-.hr {
-  border: 1px solid #eee;
-}
-.row {
-  display: flex;
-}
-.container {
-  position: relative;
-  width: 1000px;
-  margin: 20px auto;
-}
-.game-info {
-  position: relative;
-  display: flex;
-}
-.game-info .game-name {
-  flex: 1;
-}
-.game-info .game-category {
-  flex: 1;
-  text-align: right;
-}
-.game-info .category span {
-  text-transform: capitalize;
-  color: brown;
-  font-weight: bold;
-}
-.hangman-draw {
-  flex: 1;
-  background-color: #fff;
-  padding: 20px;
-  height: 324px;
-}
-.hangman-draw .the-draw {
-  width: 60px;
-  height: 280px;
-  border-bottom: 4px solid black;
-  position: relative;
-  margin: auto;
-}
-.hangman-draw .the-stand:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  background-color: #333;
-  height: 100%;
-  left: 50%;
-  margin-left: -2px;
-}
-.hangman-draw .the-hang:before {
-  content: "";
-  position: absolute;
-  height: 4px;
-  background-color: #333;
-  width: 100%;
-  left: 30px;
-  top: 15px;
-}
-.hangman-draw .the-hang:after {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 4px;
-  background-color: #333;
-  /* width:100%; */
-  left: 90px;
-  top: 15px;
-}
-.hangman-draw .the-rope {
-  opacity: 0;
-  border-radius: 50%;
-  border: 4px dashed #222;
-  position: absolute;
-  top: 40px;
-  left: 60px;
-  width: 60px;
-  height: 60px;
-  transition: all 0.3s ease;
-}
-
-.hangman-draw .the-man .head {
-  transition: all 0.3s ease;
-
-  border-radius: 50%;
-  border: 4px solid black;
-  /* background-color:#222; */
-  position: absolute;
-  top: 50px;
-  left: 65px;
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-}
-.showHead {
-  opacity: 1 !important;
-}
-.hangman-draw .the-man .eyes {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 15px;
-}
-
-.hangman-draw .the-man .eye-left {
-  content: "";
-  width: 10px;
-  height: 10px;
-  background-color: #222;
-  border-radius: 50%;
-}
-.hangman-draw .the-man .eye-right {
-  content: "";
-  width: 10px;
-  height: 10px;
-  background-color: #222;
-  border-radius: 50%;
-}
-.hangman-draw .the-man .lips {
-  width: 20px;
-  height: 5px; /* as the half of the width */
-  border-bottom-left-radius: 110px; /* 100px of height + 10px of border */
-  border-bottom-right-radius: 110px; /* 100px of height + 10px of border */
-  border: 4px solid rgb(0, 0, 0);
-  margin: auto;
-  margin-top: 2px;
-  padding-top: 2px;
-}
-.hangman-draw .the-man .body {
-  transition: all 0.3s ease;
-
-  position: absolute;
-  background-color: black;
-  width: 4px;
-  height: 110px;
-  top: 106px;
-  left: 90px;
-  opacity: 0;
-}
-.hands {
-  transition: all 0.3s ease;
-
-  opacity: 0;
-}
-.legs {
-  transition: all 0.3s ease;
-
-  opacity: 0;
-}
-.hangman-draw .the-man .hands:before {
-  content: "";
-  width: 50px;
-  position: absolute;
-  height: 4px;
-  background-color: black;
-  left: 88px;
-  top: 139px;
-  transform: rotate(30deg);
-}
-.hangman-draw .the-man .hands:after {
-  top: 139px;
-  transform: rotate(-30deg);
-  right: -37px;
-}
-
-.hangman-draw .the-man .hands:before,
-.hangman-draw .the-man .hands:after {
-  content: "";
-  width: 50px;
-  position: absolute;
-  height: 4px;
-  background-color: black;
-}
-.hangman-draw .the-man .legs:before {
-  content: "";
-  width: 50px;
-  position: absolute;
-  height: 4px;
-  background-color: black;
-  left: 87px;
-  bottom: 52px;
-  transform: rotate(50deg);
-}
-.hangman-draw .the-man .legs:after {
-  bottom: 52px;
-  transform: rotate(-50deg);
-  right: -37px;
-}
-.hangman-draw .the-man .legs:before,
-.hangman-draw .the-man .legs:after {
-  content: "";
-  width: 50px;
-  position: absolute;
-  height: 4px;
-  background-color: black;
-}
-.letters {
-  position: relative;
-
-  height: 100%;
-  flex: 1;
-  padding: 15px;
-  text-align: center;
-}
-.letters .letter-box {
-  border: 5px solid white;
-  transition: all 0.3s ease;
-  width: 55px;
-  height: 55px;
-  display: inline-block;
-  background-color: brown;
+/* Variabes */
+/* Mixin's */
+body {
+  margin: 0;
+  background: #333;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #fff;
-  text-transform: uppercase;
-  line-height: 55px;
-  cursor: pointer;
-}
-.letters-guess {
-  margin: 10px auto;
-  background-color: #f8f8f8;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  min-height: 104px;
-}
-.letters-guess span.with-space {
-  background: none;
-  border-bottom: none;
-  position: relative;
-}
-.letters-guess span.with-space:before {
-  content: "";
-  width: 20px;
-  height: 4px;
-  background-color: #222;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.letters-guess span {
-  width: 60px;
-  height: 60px;
-  font-size: 24px;
-  margin-right: 10px;
-  text-align: center;
-  line-height: 60px;
-  text-transform: uppercase;
-  font-weight: bold;
-  background-color: #fdfdfd;
-  border-bottom: 3px solid #222;
-  transition: 0.3s;
-}
-.letters .letter-box.clicked {
-  background-color: #222;
-  opacity: 0.2;
-  pointer-events: none;
-}
-.popup {
-  position: fixed;
-  background-color: #009688;
-  padding: 100px 20px;
-  width: 80%;
-  top: 10%;
-  left: 10%;
-  text-align: center;
-  font-size: 40px;
-  border: 1px solid #ccc;
-  color: #fff;
-}
-.letters.finished {
-  pointer-events: none;
-}
-.popup {
-  position: fixed;
-  background-color: #009688;
-  padding: 100px 20px;
-  width: 80%;
-  top: 10%;
-  left: 10%;
-  text-align: center;
-  font-size: 40px;
-  border: 1px solid #ccc;
-  color: #fff;
-}
-.playAgain {
-  margin-right: 10px;
-  color: white;
-  background-color: #333;
-  border: 0px;
-  padding: 10px;
-  outline: none;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-}
-.playAgain h1 {
-  color: white;
-}
-.playAgain:hover {
-  scale: 1.1;
-  background-color: #7d2b6d;
-}
-.gameOver {
-  transition: all 0.3s ease;
-  border-radius: 20px;
-  padding-bottom: 30px;
-  text-align: center;
-  position: absolute;
-  width: 20vw;
-  background-color: #009688;
-  top: 20%;
-  left: calc(60% - 20vw);
-  z-index: 10001000;
-  display: none;
-}
-.showOver {
-  display: block;
-}
-.stop {
-  color: white;
-  background-color: #333;
-  border: 0px;
-  padding: 10px;
-  outline: none;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-}
-.stop:hover {
-  scale: 1.1;
-  background-color: #7d2b6d;
-}
-.stopScreen {
-  opacity: 0;
-}
-.showStop {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 100vw;
   height: 100vh;
-  background-color: #fff;
-  opacity: 1;
+  text-align: center;
+  font-size: 18px;
 }
-.win {
-  position: absolute;
-  top: -502px;
-  left: 50%;
-  background-color: brown;
-  padding: 50px;
-  border-radius: 20px;
-  color: white;
-  opacity: 1;
+
+.wrappper {
+  width: 100%;
+  margin: 0 auto;
+}
+.wrappper:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+canvas {
+  color: #fff;
+  border: #fff dashed 2px;
+  padding: 15px;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin: 5px 0;
+}
+
+h1 {
+  font-size: 2.6em;
+}
+
+h2 {
+  font-size: 1.6em;
+}
+
+p {
+  font-size: 1.6em;
+}
+
+#alphabet {
+  margin: 15px auto;
+  padding: 0;
+  max-width: 900px;
+}
+#alphabet:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#alphabet li {
+  text-transform: uppercase;
+  float: left;
+  margin: 0 10px 10px 0;
+  list-style: none;
+  width: 35px;
+  height: 30px;
+  padding-top: 10px;
+  background: #fff;
+  color: black;
+  cursor: pointer;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border: solid 1px #fff;
   transition: all 0.2s ease;
 }
-.showWin {
-  top: 2px;
-  opacity: 1;
-}
-.closeWin {
-    color:black;
-    border:0;
-    outline: none;
-    border-radius: 2px;
-  opacity: 1;
-}
-.nextGame{
-    color:black;
-    border:0;
-    outline: none;
-    border-radius: 2px;
-  opacity: 1;
-}
-.letter-box:hover {
+#alphabet li:hover {
   scale: 1.2;
+  background: black;
+  border: solid 1px #fff;
+  color: #fff;
 }
-.gameStart {
-  padding-top: 50px;
-  background-color: rgb(158, 66, 33);
-  text-align: center;
-  position: absolute;
-  top: 10px;
-  color: white;
-  width: 100vw;
-  height: 100vw;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-.gameStart h1:hover {
-  scale: 1.22;
-}
-.gameStart h1 {
-  color: #009688;
-  font-size: 50px;
-  width: fit-content;
-  margin: auto;
-  transition: all 0.3s ease;
-}
-.hidePlay {
-  display: none;
-}
-.donateBar {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  background-color: #009688;
-  top: 0;
 
-  height: 100vh;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 50px;
-  opacity: 0;
+#my-word {
+  margin: 0;
+  display: block;
+  padding: 0;
+  display: block;
+}
+
+#my-word li {
+  position: relative;
+  list-style: none;
+  margin: 0;
+  display: inline-block;
+  padding: 0 10px;
+  font-size: 1.6em;
+}
+
+.active {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -moz-transition: all 1s ease-in;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  cursor: default;
+}
+.active:hover {
+  -moz-transition: all 1s ease-in;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -moz-transition: all 1s ease-in;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+}
+
+#mylives {
+  font-size: 1.6em;
+  text-align: center;
+  display: block;
+}
+
+button {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -khtml-border-radius: 5px;
+  background: black;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: #fff;
+  border: solid 1px transparent;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
+  margin: 10px;
+  outline: none;
+}
+button:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background: cadetblue;
+  font-size: 1.2em;
+  border: solid 1px transparent;
+  color: #333;
+}
+
+@media (max-width: 767px) {
+  #alphabet {
+    padding: 0 0 0 15px;
+  }
+}
+@media (max-width: 480px) {
+  #alphabet {
+    padding: 0 0 0 25px;
+  }
+}
+.gameOver {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  color: black;
+  opacity: 1;
+  width: 50vw;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-370vh);
   transition: all 0.3s ease;
 }
-.showBar {
+.showGameOver {
+  transform: translateY(-135vh);
   opacity: 1;
-  transform: translateX(calc(100vw - 298px));
 }
-.closeDonate {
-  transition: all 0.1s ease;
-  width: fit-content;
-  scale: 1;
-  cursor: pointer;
+.hintModal {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  color: black;
+  opacity: 1;
+  width: 50vw;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-390vh);
+  transition: all 0.3s ease;
 }
-.closeDonate:hover {
-  scale: 1.2;
+.showHintModal {
+  transform: translateY(-193vh);
+  opacity: 1;
+}
+.youWin {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  color: black;
+  opacity: 1;
+  width: 50vw;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-380vh);
+  transition: all 0.3s ease;
+}
+.showYouWin {
+  transform: translateY(-168vh);
+  opacity: 1;
 }
 .donate {
+  background-color: white;
+  color: black;
+  width: 80vw;
+  margin: auto;
+  padding: 30px;
+  transform: translateY(-180vh);
   transition: all 0.3s ease;
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 10px;
+}
+.donate h1 {
   cursor: pointer;
 }
 .donate:hover {
-  color: yellowgreen;
-}
-.move {
-  display: none;
-}
-.donateBar select {
-  border: none;
-  outline: none;
-  margin-bottom: 10px;
-  padding: 4px;
-  border-radius: 3px;
-}
-.donateBar input {
-  border: none;
-  outline: none;
-  margin-bottom: 10px;
-  padding: 4px;
-  border-radius: 3px;
-}
-.donateBar button {
-  border-radius: 3px;
-  border: none;
-  outline: none;
-  padding: 4px;
-  background-color: #222;
+  background-color: cadetblue;
   color: white;
+}
+.showDonate {
+  transform: translateY(1vh);
+  opacity: 1;
+}
+.removeButtons {
+  display: none !important;
+}
+.donateBank {
+  background-color: white;
+  color: black;
+  width: 80vw;
+  margin: auto;
+  padding: 30px;
+  transform: translateY(-180vh);
+  transition: all 0.3s ease;
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 10px;
+}
+.showDonateBank {
+  transform: translateY(-15vh);
+  opacity: 1;
+}
+.bankSelect{
+  border:1px solid black;
+  border-radius: 10px;
+  outline: none;
+  padding:10px;
+}
+.passBank{
+  border:1px solid black;
+  border-radius: 10px;
+  outline: none;
+  padding:10px;
+}
+.submitBank{
+  margin:auto;
+}
+.finished{
+  pointer-events: none;
 }
