Chi update code web game

--- a/03. chi/webgame/src/components/Modal/Modal.module.scss
+++ b/03. chi/webgame/src/components/Modal/Modal.module.scss
@@ -68,6 +68,13 @@
           }
         }
       }
+
+      .error {
+        font-size: 12px;
+        font-weight: 400;
+        color: red;
+        margin-bottom: 15px;
+      }
     }
 
     .btnWrapper {
