--- a/04. duy/fishing-react/src/scss/App.scss
+++ b/04. duy/fishing-react/src/scss/App.scss
@@ -19,3 +19,7 @@
 iframe{
     border: 10px solid rgb(31, 38, 51);
 }
+#wrapper{
+    background: url('../assets/image/Game\ art\ for\ MURKA.png') no-repeat ;
+    background-size: cover;
+}
