--- a/04. duy/fishing-react/public/fishing/index.css
+++ b/04. duy/fishing-react/public/fishing/index.css
@@ -7,7 +7,7 @@ body {
   position: absolute;
   top: 0;
   right: 100px;
-  font-size: 40px;
+  font-size: 20px;
   color:rgb(236, 181, 63);
   text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
@@ -45,6 +45,7 @@ body {
 
 .modal-title {
   text-align: center;
+  font-size: 20px;
 }
 
 ul > div {
@@ -62,7 +63,7 @@ ul > div {
   margin-top: 10px;
   padding: 10px 20px ;
   display: inline-block;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
   border: 1px solid black;
   cursor: pointer;
@@ -181,6 +182,15 @@ canvas {
 #modal-token {
   visibility: hidden;
   display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(135, 127, 145, 0.295);
+ 
+}
+
+/* Modal Content/Box */
+.modal-content { 
+  
   position: absolute;
   top: 50%;
   transform: translate(-50% ,-50%);
@@ -188,9 +198,5 @@ canvas {
   width: 50vw;
   background-color: rgb(135, 127, 145, .9);
   border-radius: 10px;
-}
-
-/* Modal Content/Box */
-.modal-content { 
-  font-size: 40px;
+  font-size: 20px;
 }
