--- a/05. vu/hangman-reactjs-firebase/src/style/TokenLeft.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/TokenLeft.module.scss
@@ -2,3 +2,9 @@
     border: 1px solid black;
     background-color: aquamarine;
 }
+.playGame{
+    background-color: red;
+    position: absolute;
+    left:0;
+    opacity: 0;
+}
