--- a/05. vu/hangman-reactjs-firebase/src/App.css
+++ b/05. vu/hangman-reactjs-firebase/src/App.css
@@ -18,3 +18,14 @@ video {
 body {
   min-height: 100vh;
 }
+button {
+  border-radius: 10px !important;
+  border: none;
+  outline: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: #fff;
+  background-color: #bc986a;
+}
