--- a/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
@@ -1,10 +1,21 @@
 .wrapper{
+    color:#fff;
     align-items: center;
     display:flex;
     // flex-direction: column;
-    background-color: aqua;
-    border:1px solid black;
+    background-color:#659DBD;
     justify-content: space-around;
+    padding-bottom:20px;
+}
+.wrapper h2:hover{
+    color:rgb(141, 135, 65)
+}
+.wrapper h2{
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.wrapper h2:last-child:hover{
+    color:white;
 }
 .user img{
     border-radius: 50%;
