--- a/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
@@ -31,6 +31,15 @@
 
 }
 .login button{
+    font-size: 35px;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    top:50vh;
+    left:30%;
+    position: absolute;
     color:white;
     background-color: #333;
+    font-weight: bold;
 }
