--- a/05. vu/hangman-reactjs-firebase/src/style/Home.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/Home.module.scss
@@ -2,7 +2,7 @@
     padding-left:30px;
     padding-right:30px;
     background-color: #659DBD;
-
+    padding-bottom: 50px;
     display:flex;
 }
 .leftScreen{
