--- a/05. vu/hangman-reactjs-firebase/src/index.css
+++ b/05. vu/hangman-reactjs-firebase/src/index.css
@@ -16,5 +16,6 @@ video {
   max-width: 100%;
 }
 body {
+  background-image: url("https://i0.wp.com/bloody-disgusting.com/wp-content/uploads/2022/05/silt.jpg?w=830&ssl=1");
   min-height: 100vh;
 }
