--- a/05. vu/hangman-reactjs-firebase/src/style/RankBoard.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/RankBoard.module.scss
@@ -1,5 +1,5 @@
 .leaderBoard{
-    border: 1px solid black;
-    background-color: brown;
+    // background-color: #659DBD;
     height: 100%;
+    color:white;
 }
