--- a/05. vu/hangman-reactjs-firebase/src/style/Home.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/Home.module.scss
@@ -1,9 +1,17 @@
 .wrapper{
+    padding-left:30px;
+    padding-right:30px;
+    // background-color: #659DBD;
+    padding-bottom: 50px;
     display:flex;
 }
 .leftScreen{
-    flex:4;
+    padding-right:20px;
+    flex:5;
 }
 .rightScreen{
-    flex:1
+    padding: 20px;
+    flex:1;
+    border-radius: 10px;
+    border: 15px solid #DAAD86;
 }
