--- a/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/ScoreBoard.module.scss
@@ -1,10 +1,24 @@
 .wrapper{
+    color:#fff;
     align-items: center;
     display:flex;
     // flex-direction: column;
-    background-color: aqua;
-    border:1px solid black;
+    // background-color:#659DBD;
     justify-content: space-around;
+    padding-bottom:15px;
+    padding-top: 15px;
+    border:3px dotted white;
+    border-radius: 10px;
+}
+.wrapper h2:hover{
+    color:rgb(141, 135, 65)
+}
+.wrapper h2{
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.wrapper h2:last-child:hover{
+    color:white;
 }
 .user img{
     border-radius: 50%;
@@ -20,6 +34,15 @@
 
 }
 .login button{
+    font-size: 35px;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    top:50vh;
+    left:30%;
+    position: absolute;
     color:white;
     background-color: #333;
+    font-weight: bold;
 }
