--- a/05. vu/hangman-reactjs-firebase/src/style/TokenLeft.module.scss
+++ b/05. vu/hangman-reactjs-firebase/src/style/TokenLeft.module.scss
@@ -1,4 +1,12 @@
 .wrapper{
-    border: 1px solid black;
-    background-color: aquamarine;
+    color:#fff;
+    // background-color: #659DBD;
+    display:flex;
+    justify-content: space-between;
+}
+.playGame{
+    background-color: red;
+    position: absolute;
+    left:0;
+    opacity: 0;
 }
