--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/Home/Home.module.scss
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/Home/Home.module.scss
@@ -280,7 +280,7 @@
   background-color: #f5f5fa;
 }
 .container {
-  width: 1280px;
+  width: 1440px;
   padding-left: 24px;
   padding-right: 24px;
   margin-right: auto;
@@ -342,6 +342,9 @@
     width: 32px;
     height: 32px;
   }
+  flex: 0 0 32px;
+  margin-right: 8px;
+  line-height: 0;
   border: 1px solid rgba(0, 0, 0, 0.05);
   border-radius: 35%;
   overflow: hidden;
@@ -355,8 +358,8 @@
   overflow: hidden;
   column-gap: 16px;
 }
-.leftBanner { 
-  height: 280px ;
+.leftBanner {
+  height: 280px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -373,7 +376,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  max-width: 240px;
+  max-width: 280px;
   background: rgb(148, 191, 255);
   border-radius: 12px;
   overflow: hidden;
@@ -386,4 +389,281 @@
 }
 .widgets {
   width: calc(100% - 254px);
+}
+.homeBrand {
+  margin-top: 16px;
+  padding: 12px 10px;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0) 22.49%,
+      rgb(255, 255, 255) 73.49%
+    ),
+    linear-gradient(
+      264.03deg,
+      rgb(220, 229, 251) -10.27%,
+      rgb(234, 236, 255) 35.65%,
+      rgb(213, 236, 253) 110.66%
+    );
+  border-radius: 8px;
+}
+.contentItem {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: rgb(39, 39, 42);
+}
+.homeBrandTitle {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: rgb(39, 39, 42);
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  img {
+    width: 70px;
+    height: 16px;
+    margin-left: 8px;
+  }
+}
+.homeBrandSlider {
+}
+.slick-arrow .slick-prev {
+  left: 0 !important;
+  background-color: red !important;
+}
+.slick-arrow .slick-next {
+  right: 0 !important;
+  background-color: red !important;
+}
+.sliderItem {
+  // padding: 0px 8px;
+  height: auto;
+  // width: 145px;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  overflow: hidden;
+}
+.homeSecondBrand {
+  margin-top: 16px;
+  padding: 12px 16px;
+  background: rgb(255, 255, 255);
+  border-radius: 8px;
+  min-height: 330px;
+}
+.groupSlide {
+  padding: 0px 4px;
+  width: 372px;
+  gap: 8px;
+  display: flex;
+}
+
+.firstSlide {
+  display: flex !important;
+}
+.groupLeft {
+  img {
+    border-radius: 8px;
+    max-height: 266.5px;
+  }
+  max-width: 178px;
+  max-height: 266.5px;
+  width: 100%;
+  height: 100%;
+}
+.groupRight {
+  img {
+    border-radius: 8px;
+    max-height: 129.25px;
+  }
+  max-width: 178px;
+  gap: 8px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.sliderWrapperItem {
+  padding: 0px 8px;
+}
+
+.headerProducts {
+  h2 {
+    height: 48px;
+    color: rgb(39, 39, 42);
+    display: flex;
+    padding: 12px 16px;
+    background-color: white;
+    flex: 1 1 0%;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    text-transform: unset;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    border-radius: 8px 8px 0px 0px;
+  }
+  z-index: 10;
+  top: 0px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5fa;
+  position: sticky;
+}
+.tabProducts {
+  background: #fff;
+  position: relative;
+  margin-bottom: 8px;
+}
+.tabItem {
+  .iconTab {
+    margin: auto;
+    width: 40px;
+    height: 40px;
+  }
+  .tabText {
+    color: rgb(128, 128, 137);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    padding-top: 4px;
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    display: -webkit-box;
+    word-break: break-word;
+  }
+}
+.contentProducts {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: stretch;
+  gap: 8px;
+  background-color: rgb(245, 245, 250);
+  border-top: 1px solid rgb(242, 242, 242);
+}
+.productItem {
+  flex: 1 1 calc(16.6667% - 8px);
+  max-width: 183px;
+  color: rgb(36, 36, 36);
+  text-decoration: none;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+  position: relative;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background: rgb(255, 255, 255);
+  overflow: hidden;
+}
+.thumbnail {
+  width: 183px;
+  height: 183px;
+  text-align: center;
+  position: relative;
+}
+.smallImg Img {
+  display: block;
+  position: absolute;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
+  width: 54px;
+  height: 14px !important;
+}
+.info {
+  padding: 8px 0px;
+  border-bottom: 1px solid rgb(235, 235, 240);
+  margin: 0px 12px;
+}
+.name h3 {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: rgb(39, 39, 42);
+  margin: 0px;
+  word-break: break-word;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  min-height: 18px;
+}
+.rating span {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: rgb(128, 128, 137);
+}
+.soleBorder {
+  width: 1px;
+  height: 9px;
+  background-color: rgb(199, 199, 199);
+}
+.contentSole {
+  padding-left: 6px;
+}
+.sole {
+  display: flex;
+  align-items: center;
+  color: rgb(128, 128, 137);
+  line-height: 150%;
+  font-size: 12px;
+  padding-left: 4px;
+}
+.underName {
+  display: flex;
+  align-items: center;
+  min-height: 18px;
+}
+.price {
+  color: rgb(255, 66, 78) !important;
+  text-align: left;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  margin-top: 6px;
+  color: rgb(56, 56, 61);
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.underPrice {
+  color: rgb(128, 128, 137);
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 150%;
+  min-height: 30px;
+}
+.underRating {
+  display: flex;
+  gap: 4px;
+  flex-wrap: wrap;
+  margin-top: 6px;
+  min-height: 17px;
+}
+.underRating .item {
+  padding: 2px 4px;
+  border: 0.5px solid rgb(10, 104, 255);
+  border-radius: 2px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: rgb(10, 104, 255);
+}
+.badgeDelivery {
+  display: flex;
+  padding: 8px 12px;
+  gap: 4px;
+  span {
+    color: rgb(128, 128, 137);
+    overflow: hidden;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
