--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
@@ -5,10 +5,56 @@ body {
 * {
   box-sizing: border-box;
 }
-img{
+img {
   width: 100%;
   height: 100% !important;
 }
-p{
-  margin:0 !important;
+p {
+  margin: 0 !important;
+}
+.slick-next {
+  width: 50px !important;
+  height: 50px !important;
+  right: 0px !important;
+  z-index: 100;
+}
+.slick-next::before,
+.slick-prev::before {
+  color: black !important;
+  font-size: 30px !important;
+}
+.slick-prev {
+  width: 50px !important;
+  height: 50px !important;
+  z-index: 100;
+  left: 0px !important;
+}
+
+.slick-slide {
+  /* padding: 0px 8px !important; */
+}
+.carousel {
+  width: 100%;
+}
+.MuiButtonBase-root {
+  padding: 8px 4px !important;
+}
+.MuiTabs-flexContainer {
+  display: grid !important;
+  overflow: auto !important;
+  position: relative !important;
+  grid-template-columns: repeat(6, 1fr) !important;
+}
+.Mui-selected {
+  background: rgba(0, 96, 255, 0.05);
+}
+.css-19kzrtu {
+  padding: 0 !important;
+}
+.MuiBreadcrumbs-ol {
+  height: 40px !important;
+}
+.MuiSvgIcon-root{
+  width:16px;
+  height:16px;
 }
