--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/Home/Home.module.scss
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/Home/Home.module.scss
@@ -581,6 +581,8 @@
   margin: 0px 12px;
 }
 .name h3 {
+  height: 35px;
+  overflow: hidden;
   font-weight: 400;
   font-size: 12px;
   line-height: 150%;
