--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
@@ -33,6 +33,9 @@ p {
 .carousel {
   width: 100%;
 }
+.carousel-inner {
+  border-radius: 4px;
+}
 .MuiButtonBase-root {
   padding: 8px 4px !important;
 }
@@ -73,7 +76,21 @@ a {
   top: 0px;
   z-index: 10;
 }
-.szh-menu{
-  left:-62px !important;
-  top:20px !important;
+.szh-menu {
+  left: -62px !important;
+  top: 20px !important;
+}
+
+/* html {
+  background-color: rgb(245, 245, 250);
+} */
+.slick-slider {
+  position: relative;
+  background: white;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  background-color: rgb(245 245 250); /* margin-right: 10px; */
+}
+img {
+  object-fit: cover;
 }
