--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/globals.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   font-family: Roboto, Helvetica, Arial, sans-serif;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 * {
   box-sizing: border-box;
 }
@@ -80,16 +83,18 @@ a {
   left: -62px !important;
   top: 20px !important;
 }
+.slick-initialized {
+  margin: 16px 0px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+}
 
-/* html {
-  background-color: rgb(245, 245, 250);
-} */
 .slick-slider {
   position: relative;
   background: white;
   border-radius: 4px;
   margin-bottom: 10px;
-  background-color: rgb(245 245 250); /* margin-right: 10px; */
+  background-color: rgb(245 245 250);
 }
 img {
   object-fit: cover;
